parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ENTRADA
Rule 1     empty -> <empty>
Rule 2     ENTRADA -> DECLARACIONES
Rule 3     DECLARACIONES -> TkUsing SECUENCIA_DECLARACION TkBegin SECUENCIACION TkEnd
Rule 4     SECUENCIA_DECLARACION -> DECLARACION TkPuntoYComa SECUENCIA_DECLARACION
Rule 5     SECUENCIA_DECLARACION -> DECLARACION
Rule 6     DECLARACION -> VARIABLES TkOf TkType TIPO
Rule 7     VARIABLES -> TkIdent TkComa VARIABLES
Rule 8     VARIABLES -> TkIdent
Rule 9     TIPO -> TkInteger
Rule 10    TIPO -> TkBoolean
Rule 11    TIPO -> TkCanvas
Rule 12    SECUENCIACION -> INSTRUCCION_IF
Rule 13    SECUENCIACION -> INSTRUCCION_WITH
Rule 14    SECUENCIACION -> INSTRUCCION_FROM
Rule 15    SECUENCIACION -> INSTRUCCION_WHILE
Rule 16    SECUENCIACION -> INSTRUCCION_ASIGNACION
Rule 17    SECUENCIACION -> INSTRUCCION_IO
Rule 18    SECUENCIACION -> empty
Rule 19    SECUENCIACION2 -> INSTRUCCION_IF
Rule 20    SECUENCIACION2 -> INSTRUCCION_WITH
Rule 21    SECUENCIACION2 -> INSTRUCCION_FROM
Rule 22    SECUENCIACION2 -> INSTRUCCION_WHILE
Rule 23    SECUENCIACION2 -> INSTRUCCION_ASIGNACION
Rule 24    SECUENCIACION2 -> INSTRUCCION_IO
Rule 25    SECUENCIACION2 -> DECLARACIONES
Rule 26    SECUENCIACION2 -> empty
Rule 27    INSTRUCCION_IF -> TkIf EXPRESION TkThen SECUENCIACION2 TkOtherwise SECUENCIACION2 TkDone
Rule 28    INSTRUCCION_IF -> TkIf EXPRESION SECUENCIACION2 TkDone
Rule 29    INSTRUCCION_WITH -> TkWith TkIdent TkFrom COTA_INF TkTo COTA_SUP TkRepeat SECUENCIACION2 TkDone TkPuntoYComa SECUENCIACION
Rule 30    INSTRUCCION_FROM -> TkFrom COTA_INF TkTo COTA_SUP TkRepeat SECUENCIACION2 TkDone TkPuntoYComa SECUENCIACION
Rule 31    INSTRUCCION_WHILE -> TkWhile EXPRESION TkRepeat SECUENCIACION2 TkDone
Rule 32    INSTRUCCION_ASIGNACION -> TkIdent TkAsignacion EXPRESION TkPuntoYComa SECUENCIACION
Rule 33    INSTRUCCION_ASIGNACION -> TkIdent TkAsignacion EXPRESION SECUENCIACION
Rule 34    INSTRUCCION_IO -> TkRead TkIdent TkPuntoYComa
Rule 35    INSTRUCCION_IO -> TkPrint EXPRESION
Rule 36    COTA_INF -> EXPRESION_TERMINAL
Rule 37    COTA_SUP -> EXPRESION_TERMINAL
Rule 38    EXPRESION -> EXPRESION_BINARIA
Rule 39    EXPRESION -> EXPRESION_UNARIA
Rule 40    EXPRESION -> EXPRESION_TERMINAL
Rule 41    EXPRESION_BINARIA -> EXPRESION TkMas EXPRESION
Rule 42    EXPRESION_BINARIA -> EXPRESION TkMenos EXPRESION
Rule 43    EXPRESION_BINARIA -> EXPRESION TkMult EXPRESION
Rule 44    EXPRESION_BINARIA -> EXPRESION TkDiv EXPRESION
Rule 45    EXPRESION_BINARIA -> EXPRESION TkMod EXPRESION
Rule 46    EXPRESION_BINARIA -> EXPRESION TkConjuncion EXPRESION
Rule 47    EXPRESION_BINARIA -> EXPRESION TkDisyuncion EXPRESION
Rule 48    EXPRESION_BINARIA -> EXPRESION TkMenor EXPRESION
Rule 49    EXPRESION_BINARIA -> EXPRESION TkMayor EXPRESION
Rule 50    EXPRESION_BINARIA -> EXPRESION TkMenorIgual EXPRESION
Rule 51    EXPRESION_BINARIA -> EXPRESION TkMayorIgual EXPRESION
Rule 52    EXPRESION_BINARIA -> EXPRESION TkIgual EXPRESION
Rule 53    EXPRESION_BINARIA -> EXPRESION TkDesigual EXPRESION
Rule 54    EXPRESION_BINARIA -> EXPRESION TkConcatHorizontal EXPRESION
Rule 55    EXPRESION_BINARIA -> EXPRESION TkConcatVertical EXPRESION
Rule 56    EXPRESION_UNARIA -> TkParAbre EXPRESION TkParCierra
Rule 57    EXPRESION_UNARIA -> TkMenos EXPRESION
Rule 58    EXPRESION_UNARIA -> EXPRESION TkNegacion
Rule 59    EXPRESION_UNARIA -> TkRotacion EXPRESION
Rule 60    EXPRESION_UNARIA -> EXPRESION TkTransposicion
Rule 61    EXPRESION_TERMINAL -> TkIdent
Rule 62    EXPRESION_TERMINAL -> TkNumLit
Rule 63    EXPRESION_TERMINAL -> TkTrue
Rule 64    EXPRESION_TERMINAL -> TkFalse
Rule 65    EXPRESION_TERMINAL -> TkCanvasLit

Terminals, with rules where they appear

TkAsignacion         : 32 33
TkBegin              : 3
TkBoolean            : 10
TkCanvas             : 11
TkCanvasLit          : 65
TkComa               : 7
TkConcatHorizontal   : 54
TkConcatVertical     : 55
TkConjuncion         : 46
TkDesigual           : 53
TkDisyuncion         : 47
TkDiv                : 44
TkDone               : 27 28 29 30 31
TkEnd                : 3
TkFalse              : 64
TkFrom               : 29 30
TkIdent              : 7 8 29 32 33 34 61
TkIf                 : 27 28
TkIgual              : 52
TkInteger            : 9
TkMas                : 41
TkMayor              : 49
TkMayorIgual         : 51
TkMenor              : 48
TkMenorIgual         : 50
TkMenos              : 42 57
TkMod                : 45
TkMult               : 43
TkNegacion           : 58
TkNumLit             : 62
TkOf                 : 6
TkOtherwise          : 27
TkParAbre            : 56
TkParCierra          : 56
TkPrint              : 35
TkPuntoYComa         : 4 29 30 32 34
TkRead               : 34
TkRepeat             : 29 30 31
TkRotacion           : 59
TkThen               : 27
TkTo                 : 29 30
TkTransposicion      : 60
TkTrue               : 63
TkType               : 6
TkUsing              : 3
TkWhile              : 31
TkWith               : 29
error                : 

Nonterminals, with rules where they appear

COTA_INF             : 29 30
COTA_SUP             : 29 30
DECLARACION          : 4 5
DECLARACIONES        : 2 25
ENTRADA              : 0
EXPRESION            : 27 28 31 32 33 35 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 58 59 60
EXPRESION_BINARIA    : 38
EXPRESION_TERMINAL   : 36 37 40
EXPRESION_UNARIA     : 39
INSTRUCCION_ASIGNACION : 16 23
INSTRUCCION_FROM     : 14 21
INSTRUCCION_IF       : 12 19
INSTRUCCION_IO       : 17 24
INSTRUCCION_WHILE    : 15 22
INSTRUCCION_WITH     : 13 20
SECUENCIACION        : 3 29 30 32 33
SECUENCIACION2       : 27 27 28 29 30 31
SECUENCIA_DECLARACION : 3 4
TIPO                 : 6
VARIABLES            : 6 7
empty                : 18 26

Parsing method: LALR

state 0

    (0) S' -> . ENTRADA
    (2) ENTRADA -> . DECLARACIONES
    (3) DECLARACIONES -> . TkUsing SECUENCIA_DECLARACION TkBegin SECUENCIACION TkEnd

    TkUsing         shift and go to state 3

    ENTRADA                        shift and go to state 1
    DECLARACIONES                  shift and go to state 2

state 1

    (0) S' -> ENTRADA .



state 2

    (2) ENTRADA -> DECLARACIONES .

    $end            reduce using rule 2 (ENTRADA -> DECLARACIONES .)


state 3

    (3) DECLARACIONES -> TkUsing . SECUENCIA_DECLARACION TkBegin SECUENCIACION TkEnd
    (4) SECUENCIA_DECLARACION -> . DECLARACION TkPuntoYComa SECUENCIA_DECLARACION
    (5) SECUENCIA_DECLARACION -> . DECLARACION
    (6) DECLARACION -> . VARIABLES TkOf TkType TIPO
    (7) VARIABLES -> . TkIdent TkComa VARIABLES
    (8) VARIABLES -> . TkIdent

    TkIdent         shift and go to state 7

    SECUENCIA_DECLARACION          shift and go to state 4
    DECLARACION                    shift and go to state 5
    VARIABLES                      shift and go to state 6

state 4

    (3) DECLARACIONES -> TkUsing SECUENCIA_DECLARACION . TkBegin SECUENCIACION TkEnd

    TkBegin         shift and go to state 8


state 5

    (4) SECUENCIA_DECLARACION -> DECLARACION . TkPuntoYComa SECUENCIA_DECLARACION
    (5) SECUENCIA_DECLARACION -> DECLARACION .

    TkPuntoYComa    shift and go to state 9
    TkBegin         reduce using rule 5 (SECUENCIA_DECLARACION -> DECLARACION .)


state 6

    (6) DECLARACION -> VARIABLES . TkOf TkType TIPO

    TkOf            shift and go to state 10


state 7

    (7) VARIABLES -> TkIdent . TkComa VARIABLES
    (8) VARIABLES -> TkIdent .

    TkComa          shift and go to state 11
    TkOf            reduce using rule 8 (VARIABLES -> TkIdent .)


state 8

    (3) DECLARACIONES -> TkUsing SECUENCIA_DECLARACION TkBegin . SECUENCIACION TkEnd
    (12) SECUENCIACION -> . INSTRUCCION_IF
    (13) SECUENCIACION -> . INSTRUCCION_WITH
    (14) SECUENCIACION -> . INSTRUCCION_FROM
    (15) SECUENCIACION -> . INSTRUCCION_WHILE
    (16) SECUENCIACION -> . INSTRUCCION_ASIGNACION
    (17) SECUENCIACION -> . INSTRUCCION_IO
    (18) SECUENCIACION -> . empty
    (27) INSTRUCCION_IF -> . TkIf EXPRESION TkThen SECUENCIACION2 TkOtherwise SECUENCIACION2 TkDone
    (28) INSTRUCCION_IF -> . TkIf EXPRESION SECUENCIACION2 TkDone
    (29) INSTRUCCION_WITH -> . TkWith TkIdent TkFrom COTA_INF TkTo COTA_SUP TkRepeat SECUENCIACION2 TkDone TkPuntoYComa SECUENCIACION
    (30) INSTRUCCION_FROM -> . TkFrom COTA_INF TkTo COTA_SUP TkRepeat SECUENCIACION2 TkDone TkPuntoYComa SECUENCIACION
    (31) INSTRUCCION_WHILE -> . TkWhile EXPRESION TkRepeat SECUENCIACION2 TkDone
    (32) INSTRUCCION_ASIGNACION -> . TkIdent TkAsignacion EXPRESION TkPuntoYComa SECUENCIACION
    (33) INSTRUCCION_ASIGNACION -> . TkIdent TkAsignacion EXPRESION SECUENCIACION
    (34) INSTRUCCION_IO -> . TkRead TkIdent TkPuntoYComa
    (35) INSTRUCCION_IO -> . TkPrint EXPRESION
    (1) empty -> .

    TkIf            shift and go to state 20
    TkWith          shift and go to state 21
    TkFrom          shift and go to state 23
    TkWhile         shift and go to state 24
    TkIdent         shift and go to state 22
    TkRead          shift and go to state 25
    TkPrint         shift and go to state 26
    TkEnd           reduce using rule 1 (empty -> .)

    SECUENCIACION                  shift and go to state 12
    INSTRUCCION_IF                 shift and go to state 13
    INSTRUCCION_WITH               shift and go to state 14
    INSTRUCCION_FROM               shift and go to state 15
    INSTRUCCION_WHILE              shift and go to state 16
    INSTRUCCION_ASIGNACION         shift and go to state 17
    INSTRUCCION_IO                 shift and go to state 18
    empty                          shift and go to state 19

state 9

    (4) SECUENCIA_DECLARACION -> DECLARACION TkPuntoYComa . SECUENCIA_DECLARACION
    (4) SECUENCIA_DECLARACION -> . DECLARACION TkPuntoYComa SECUENCIA_DECLARACION
    (5) SECUENCIA_DECLARACION -> . DECLARACION
    (6) DECLARACION -> . VARIABLES TkOf TkType TIPO
    (7) VARIABLES -> . TkIdent TkComa VARIABLES
    (8) VARIABLES -> . TkIdent

    TkIdent         shift and go to state 7

    DECLARACION                    shift and go to state 5
    SECUENCIA_DECLARACION          shift and go to state 27
    VARIABLES                      shift and go to state 6

state 10

    (6) DECLARACION -> VARIABLES TkOf . TkType TIPO

    TkType          shift and go to state 28


state 11

    (7) VARIABLES -> TkIdent TkComa . VARIABLES
    (7) VARIABLES -> . TkIdent TkComa VARIABLES
    (8) VARIABLES -> . TkIdent

    TkIdent         shift and go to state 7

    VARIABLES                      shift and go to state 29

state 12

    (3) DECLARACIONES -> TkUsing SECUENCIA_DECLARACION TkBegin SECUENCIACION . TkEnd

    TkEnd           shift and go to state 30


state 13

    (12) SECUENCIACION -> INSTRUCCION_IF .

    TkEnd           reduce using rule 12 (SECUENCIACION -> INSTRUCCION_IF .)
    TkDone          reduce using rule 12 (SECUENCIACION -> INSTRUCCION_IF .)
    TkOtherwise     reduce using rule 12 (SECUENCIACION -> INSTRUCCION_IF .)


state 14

    (13) SECUENCIACION -> INSTRUCCION_WITH .

    TkEnd           reduce using rule 13 (SECUENCIACION -> INSTRUCCION_WITH .)
    TkDone          reduce using rule 13 (SECUENCIACION -> INSTRUCCION_WITH .)
    TkOtherwise     reduce using rule 13 (SECUENCIACION -> INSTRUCCION_WITH .)


state 15

    (14) SECUENCIACION -> INSTRUCCION_FROM .

    TkEnd           reduce using rule 14 (SECUENCIACION -> INSTRUCCION_FROM .)
    TkDone          reduce using rule 14 (SECUENCIACION -> INSTRUCCION_FROM .)
    TkOtherwise     reduce using rule 14 (SECUENCIACION -> INSTRUCCION_FROM .)


state 16

    (15) SECUENCIACION -> INSTRUCCION_WHILE .

    TkEnd           reduce using rule 15 (SECUENCIACION -> INSTRUCCION_WHILE .)
    TkDone          reduce using rule 15 (SECUENCIACION -> INSTRUCCION_WHILE .)
    TkOtherwise     reduce using rule 15 (SECUENCIACION -> INSTRUCCION_WHILE .)


state 17

    (16) SECUENCIACION -> INSTRUCCION_ASIGNACION .

    TkEnd           reduce using rule 16 (SECUENCIACION -> INSTRUCCION_ASIGNACION .)
    TkDone          reduce using rule 16 (SECUENCIACION -> INSTRUCCION_ASIGNACION .)
    TkOtherwise     reduce using rule 16 (SECUENCIACION -> INSTRUCCION_ASIGNACION .)


state 18

    (17) SECUENCIACION -> INSTRUCCION_IO .

    TkEnd           reduce using rule 17 (SECUENCIACION -> INSTRUCCION_IO .)
    TkDone          reduce using rule 17 (SECUENCIACION -> INSTRUCCION_IO .)
    TkOtherwise     reduce using rule 17 (SECUENCIACION -> INSTRUCCION_IO .)


state 19

    (18) SECUENCIACION -> empty .

    TkEnd           reduce using rule 18 (SECUENCIACION -> empty .)
    TkDone          reduce using rule 18 (SECUENCIACION -> empty .)
    TkOtherwise     reduce using rule 18 (SECUENCIACION -> empty .)


state 20

    (27) INSTRUCCION_IF -> TkIf . EXPRESION TkThen SECUENCIACION2 TkOtherwise SECUENCIACION2 TkDone
    (28) INSTRUCCION_IF -> TkIf . EXPRESION SECUENCIACION2 TkDone
    (38) EXPRESION -> . EXPRESION_BINARIA
    (39) EXPRESION -> . EXPRESION_UNARIA
    (40) EXPRESION -> . EXPRESION_TERMINAL
    (41) EXPRESION_BINARIA -> . EXPRESION TkMas EXPRESION
    (42) EXPRESION_BINARIA -> . EXPRESION TkMenos EXPRESION
    (43) EXPRESION_BINARIA -> . EXPRESION TkMult EXPRESION
    (44) EXPRESION_BINARIA -> . EXPRESION TkDiv EXPRESION
    (45) EXPRESION_BINARIA -> . EXPRESION TkMod EXPRESION
    (46) EXPRESION_BINARIA -> . EXPRESION TkConjuncion EXPRESION
    (47) EXPRESION_BINARIA -> . EXPRESION TkDisyuncion EXPRESION
    (48) EXPRESION_BINARIA -> . EXPRESION TkMenor EXPRESION
    (49) EXPRESION_BINARIA -> . EXPRESION TkMayor EXPRESION
    (50) EXPRESION_BINARIA -> . EXPRESION TkMenorIgual EXPRESION
    (51) EXPRESION_BINARIA -> . EXPRESION TkMayorIgual EXPRESION
    (52) EXPRESION_BINARIA -> . EXPRESION TkIgual EXPRESION
    (53) EXPRESION_BINARIA -> . EXPRESION TkDesigual EXPRESION
    (54) EXPRESION_BINARIA -> . EXPRESION TkConcatHorizontal EXPRESION
    (55) EXPRESION_BINARIA -> . EXPRESION TkConcatVertical EXPRESION
    (56) EXPRESION_UNARIA -> . TkParAbre EXPRESION TkParCierra
    (57) EXPRESION_UNARIA -> . TkMenos EXPRESION
    (58) EXPRESION_UNARIA -> . EXPRESION TkNegacion
    (59) EXPRESION_UNARIA -> . TkRotacion EXPRESION
    (60) EXPRESION_UNARIA -> . EXPRESION TkTransposicion
    (61) EXPRESION_TERMINAL -> . TkIdent
    (62) EXPRESION_TERMINAL -> . TkNumLit
    (63) EXPRESION_TERMINAL -> . TkTrue
    (64) EXPRESION_TERMINAL -> . TkFalse
    (65) EXPRESION_TERMINAL -> . TkCanvasLit

    TkParAbre       shift and go to state 36
    TkMenos         shift and go to state 35
    TkRotacion      shift and go to state 37
    TkIdent         shift and go to state 38
    TkNumLit        shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkCanvasLit     shift and go to state 42

    EXPRESION                      shift and go to state 31
    EXPRESION_BINARIA              shift and go to state 32
    EXPRESION_UNARIA               shift and go to state 33
    EXPRESION_TERMINAL             shift and go to state 34

state 21

    (29) INSTRUCCION_WITH -> TkWith . TkIdent TkFrom COTA_INF TkTo COTA_SUP TkRepeat SECUENCIACION2 TkDone TkPuntoYComa SECUENCIACION

    TkIdent         shift and go to state 43


state 22

    (32) INSTRUCCION_ASIGNACION -> TkIdent . TkAsignacion EXPRESION TkPuntoYComa SECUENCIACION
    (33) INSTRUCCION_ASIGNACION -> TkIdent . TkAsignacion EXPRESION SECUENCIACION

    TkAsignacion    shift and go to state 44


state 23

    (30) INSTRUCCION_FROM -> TkFrom . COTA_INF TkTo COTA_SUP TkRepeat SECUENCIACION2 TkDone TkPuntoYComa SECUENCIACION
    (36) COTA_INF -> . EXPRESION_TERMINAL
    (61) EXPRESION_TERMINAL -> . TkIdent
    (62) EXPRESION_TERMINAL -> . TkNumLit
    (63) EXPRESION_TERMINAL -> . TkTrue
    (64) EXPRESION_TERMINAL -> . TkFalse
    (65) EXPRESION_TERMINAL -> . TkCanvasLit

    TkIdent         shift and go to state 38
    TkNumLit        shift and go to state 39
    TkTrue          shift and go to state 40
    TkFalse         shift and go to state 41
    TkCanvasLit     shift and go to state 42

    COTA_INF                       shift and go to state 45
    EXPRESION_TERMINAL             shift and go to state 46

state 24

    (31) INSTRUCCION_WHILE -> TkWhile . EXPRESION TkRepeat SECUENCIACION2 TkDone
    (38) EXPRESION -> . EXPRESION_BINARIA
    (39) EXPRESION -> . EXPRESION_UNARIA
    (40) EXPRESION -> . EXPRESION_TERMINAL
    (41) EXPRESION_BINARIA -> . EXPRESION TkMas EXPRESION
    (42) EXPRESION_BINARIA -> . EXPRESION TkMenos EXPRESION
    (43) EXPRESION_BINARIA -> . EXPRESION TkMult EXPRESION
    (44) EXPRESION_BINARIA -> . EXPRESION TkDiv EXPRESION
    (45) EXPRESION_BINARIA -> . EXPRESION TkMod EXPRESION
    (46) EXPRESION_BINARIA -> . EXPRESION TkConjuncion EXPRESION
    (47) EXPRESION_BINARIA -> . EXPRESION TkDisyuncion EXPRESION
    (48) EXPRESION_BINARIA -> . EXPRESION TkMenor EXPRESION
    (49) EXPRESION_BINARIA -> . EXPRESION TkMayor EXPRESION
    (50) EXPRESION_BINARIA -> . EXPRESION TkMenorIgual EXPRESION
    (51) EXPRESION_BINARIA -> . EXPRESION TkMayorIgual EXPRESION
    (52) EXPRESION_BINARIA -> . EXPRESION TkIgual EXPRESION
    (53) EXPRESION_BINARIA -> . EXPRESION TkDesigual EXPRESION
    (54) EXPRESION_BINARIA -> . EXPRESION TkConcatHorizontal EXPRESION
    (55) EXPRESION_BINARIA -> . EXPRESION TkConcatVertical EXPRESION
    (56) EXPRESION_UNARIA -> . TkParAbre EXPRESION TkParCierra
    (57) EXPRESION_UNARIA -> . TkMenos EXPRESION
    (58) EXPRESION_UNARIA -> . EXPRESION TkNegacion
    (59) EXPRESION_UNARIA -> . TkRotacion EXPRESION
    (60) EXPRESION_UNARIA -> . EXPRESION TkTransposicion
    (61) EXPRESION_TERMINAL -> . TkIdent
    (62) EXPRESION_TERMINAL -> . TkNumLit
    (63) EXPRESION_TERMINAL -> . TkTrue
    (64) EXPRESION_TERMINAL -> . TkFalse
    (65) EXPRESION_TERMINAL -> . TkCanvasLit
